# PersonalEngine

./: .gitignore  CMakeLists.txt  Doxyfile
Resources/: ModelFragment.txt  ModelFragmentBasic.txt  ModelFragmentNormal.txt  ModelVertex.txt  ModelVertexNormal.txt
Resources/Shaders/: ModelFragment.txt  ModelFragmentBasic.txt  ModelFragmentNormal.txt  ModelFragmentNormalSpecular.txt  ModelVertex.txt  ModelVertexBasic.txt  ModelVertexNormal.txt  PostProcessFragment.txt  PostProcessVertex.txt  ShadowFragment.txt  ShadowVertex.txt  SkyboxFragment.txt  SkyboxVertex.txt
Resources/Textures/.mayaSwatches/: SunDiff.jpg_hcm.swatch
contrib/msvc/lib/: SOIL.lib  assimp-vc140-mt.lib
resources/Shaders/: ModelFragmentNormalSpecularEmissive.txt
src/: Input.h
src/FairEngine/: Asteroid.cpp  Asteroid.h  AudioSource.cpp  AudioSource.h  Bullet.cpp  Bullet.h  BulletBehaviour.cpp  BulletBehaviour.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  CollisionResolver.cpp  CollisionResolver.h  Component.h  Contact.cpp  Contact.h  Engine.cpp  Engine.h  Entity.cpp  Flashlight.cpp  Flashlight.h  FlyingController.cpp  FlyingController.h  Gun.cpp  Gun.h  Input.cpp  Input.h  Jetpack.cpp  Jetpack.h  Light.cpp  Light.h  Material.h  Mesh.cpp  MeshRenderer.cpp  RenderController.cpp  RenderController.h  ResourceManager.cpp  RigidBody.cpp  RigidBody.h  (+14 more)
src/PersonalEngine/: Asteroid.cpp  Asteroid.h  AudioSource.cpp  AudioSource.h  Bullet.cpp  Bullet.h  BulletBehaviour.cpp  BulletBehaviour.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  CollisionResolver.cpp  CollisionResolver.h  Component.h  Contact.cpp  Contact.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  ExceptionHandler.h  Flashlight.cpp  Flashlight.h  FlyingController.cpp  FlyingController.h  Gun.cpp  Gun.h  Input.cpp  Input.h  Jetpack.cpp  Jetpack.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  (+29 more)
tools/: create vs2017 sln.bat
